# myelectricaldata_new

./: .editorconfig  .editorconfig-checker.json  .env.example  .env.local.example  .flake8  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .pylintrc  .releaserc-helm.yaml  ADMIN.md  AUTHENTICATION.md  CHANGELOG.md  CLAUDE.md  Caddyfile  Consumption.tsx.bak  DATABASE.md  DEV-MODE.md  DOCKER.md  FEATURE_ADMIN_OFFERS_SUMMARY.md  FEATURE_PDL_ACTIVATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART_TARIFS.md  README.md  compare_enedis.py  conductor.json  dev-start.sh  dev-stop.sh  dev.sh  docker-compose.conductor.yml  docker-compose.dev.yml  docker-compose.yml  mise.toml  nginx.conf.example  package.json  rebuild-frontend.sh  test_saturday_api.py  watch-backend.sh  watch-frontend.sh
apps/local-client/: .env.example  Dockerfile  Makefile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
apps/local-client/frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
apps/local-client/frontend/src/: App.tsx  index.css
apps/local-client/src/: __init__.py  config.py  main.py
apps/local-client/src/database/: __init__.py  models.py  repository.py
apps/local-client/src/exporters/: __init__.py  base.py  home_assistant.py  jeedom.py  manager.py  mqtt.py  prometheus.py  victoriametrics.py
apps/local-client/src/gateway/: __init__.py  client.py  schemas.py
apps/local-client/src/services/: __init__.py  scheduler.py  sync.py
apps/local-client/static/: index.html
apps/local-client/tests/: __init__.py
(+421 files in other folders)
