[project]
name = "myelectricaldata-local-client"
version = "1.0.0"
description = "MyElectricalData Local Client - Synchronize and export your Linky data locally"
authors = [{name = "MyElectricalData Team"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "httpx>=0.27.2",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "aiomqtt>=2.3.0",
    "pyyaml>=6.0.2",
    "prometheus-client>=0.21.0",
    "apscheduler>=3.10.4",
    "watchfiles>=1.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.2",
    "black>=24.10.0",
    "ruff>=0.8.4",
    "mypy>=1.13.0",
]

[project.scripts]
med-client = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
